컴상태 이상해서 저장

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,3 +104,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mCountDownWidget",NewName="/Script/WarmsPortfolio.PlayerCharacter.mHpBarWidget")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mStatComp",NewName="/Script/WarmsPortfolio.PlayerCharacter.mStatComponent")
++PropertyRedirects=(OldName="/Script/WarmsPortfolio.WeaponData.ProjectileClass",NewName="/Script/WarmsPortfolio.WeaponData.WeaponClass")
