--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -153,6 +153,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MagicLeap_Right_Trackpad_Touch)
 +ActionMappings=(ActionName="RightClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Charge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="OpenInventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=Up)
