--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,13 +35,15 @@
 +Profiles=(Name="Ragdoll",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore)),HelpMessage="Simulating Skeletal Mesh Component. All other channels will be set to default.")
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
-+Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles")
-+Profiles=(Name="MyCharacter",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="MyCharacter",CustomResponses=,HelpMessage="Needs description")
++Profiles=(Name="Projectile",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles")
++Profiles=(Name="MyCharacter",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="MyCharacter",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="ItemActor",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="FloorTeest",CollisionEnabled=PhysicsOnly,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="Needs description")
 +Profiles=(Name="BoxTest",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Box",CustomResponses=,HelpMessage="Needs description")
++Profiles=(Name="ItemActor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="ItemActor",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="MyCharacter",Response=ECR_Overlap)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="MyCharacter")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Box")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="ItemActor")
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
@@ -50,6 +52,7 @@
 +EditProfiles=(Name="Spectator",CustomResponses=((Channel="MyCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="MyCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -105,3 +108,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mCountDownWidget",NewName="/Script/WarmsPortfolio.PlayerCharacter.mHpBarWidget")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mStatComp",NewName="/Script/WarmsPortfolio.PlayerCharacter.mStatComponent")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.WeaponData.ProjectileClass",NewName="/Script/WarmsPortfolio.WeaponData.WeaponClass")
+
