--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -154,6 +154,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Charge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="OpenInventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="AcquireItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=Up)
@@ -180,6 +181,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=MagicLeap_Left_Trackpad_Y)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=MagicLeap_Right_Trackpad_Y)
 +AxisMappings=(AxisName="LeftRight",Scale=1.000000,Key=MagicLeap_Right_Trackpad_X)
++AxisMappings=(AxisName="Pull",Scale=1.000000,Key=LeftControl)
++AxisMappings=(AxisName="Push",Scale=1.000000,Key=LeftShift)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
