ItemMesh를 StaticMesh, SkeletalMesh 둘 다 사용할 수 있게 변경하기전 저장

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 *.uasset
+MyContents/
+japanese_stone_wall_diff_4k.jpg
