--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -155,6 +155,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Charge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="OpenInventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +ActionMappings=(ActionName="AcquireItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="ActionPull",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=Up)
