--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,4 +108,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mCountDownWidget",NewName="/Script/WarmsPortfolio.PlayerCharacter.mHpBarWidget")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mStatComp",NewName="/Script/WarmsPortfolio.PlayerCharacter.mStatComponent")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.WeaponData.ProjectileClass",NewName="/Script/WarmsPortfolio.WeaponData.WeaponClass")
++PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mGunPos",NewName="/Script/WarmsPortfolio.PlayerCharacter.mWeaponPos")
++PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.CurrentWeapon",NewName="/Script/WarmsPortfolio.PlayerCharacter.mCurrentWeapon")
++PropertyRedirects=(OldName="/Script/WarmsPortfolio.Weapon.mStaticMesh",NewName="/Script/WarmsPortfolio.Weapon.mMeshComponent")
 
