--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,6 +44,7 @@
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="MyCharacter")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Box")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="ItemActor")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="KillObject")
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
@@ -88,7 +89,6 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
 
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -103,7 +103,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="WarmsPortfolioGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="WarmsPortfolioCharacter")
 
-
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mCountDownWidget",NewName="/Script/WarmsPortfolio.PlayerCharacter.mHpBarWidget")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mStatComp",NewName="/Script/WarmsPortfolio.PlayerCharacter.mStatComponent")
@@ -111,4 +110,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.mGunPos",NewName="/Script/WarmsPortfolio.PlayerCharacter.mWeaponPos")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.PlayerCharacter.CurrentWeapon",NewName="/Script/WarmsPortfolio.PlayerCharacter.mCurrentWeapon")
 +PropertyRedirects=(OldName="/Script/WarmsPortfolio.Weapon.mStaticMesh",NewName="/Script/WarmsPortfolio.Weapon.mMeshComponent")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
