바다, 바다에 빠지면 죽는것 구현

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -40,6 +40,7 @@
 +Profiles=(Name="FloorTeest",CollisionEnabled=PhysicsOnly,bCanModify=True,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="Needs description")
 +Profiles=(Name="BoxTest",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Box",CustomResponses=,HelpMessage="Needs description")
 +Profiles=(Name="ItemActor",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="ItemActor",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="MyCharacter",Response=ECR_Overlap)),HelpMessage="Needs description")
++Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="MyCharacter")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Box")
@@ -54,6 +55,7 @@
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="MyCharacter",Response=ECR_Ignore)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile")))
++EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="MyCharacter",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
